--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@shufo/prettier-plugin-blade": "^1.13.4",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.14",
+        "prettier": "^3.1.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     }
