--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "prettier": "^3.1.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@alpinejs/persist": "^3.13.3",
+        "alpinejs": "^3.13.3"
     }
 }
