Added Trix Rich Text Editor

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.2"
+        "livewire/livewire": "^3.2",
+        "spatie/laravel-permission": "^6.2",
+        "spatie/laravel-tags": "^4.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
