--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@alpinejs/persist": "^3.13.3",
-        "alpinejs": "^3.13.3"
+        "alpinejs": "^3.13.3",
+        "trix": "^2.0.8"
     }
 }
