--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.2",
+        "spatie/laravel-markdown": "^2.4",
         "spatie/laravel-permission": "^6.2",
-        "spatie/laravel-tags": "^4.5"
+        "spatie/laravel-tags": "^4.5",
+        "te7a-houdini/laravel-trix": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
