--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@alpinejs/persist": "^3.13.3",
         "alpinejs": "^3.13.3",
+        "shiki": "^0.14.6",
         "trix": "^2.0.8"
     }
 }
