--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "graham-campbell/markdown": "15.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.2",
-        "spatie/laravel-markdown": "^2.4",
         "spatie/laravel-permission": "^6.2",
         "spatie/laravel-tags": "^4.5",
         "te7a-houdini/laravel-trix": "^2.0"
